{
    "name": "PlayerActions",
    "maps": [
        {
            "name": "PlayerActionMap",
            "id": "ef962d4f-a40d-477e-9041-748a20d9807f",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "b16e3a5c-920d-43ef-ad24-39953052a059",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SkillOne",
                    "type": "Button",
                    "id": "597da023-4d6a-4e5f-be68-d256ee982e1e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SkillTwo",
                    "type": "Button",
                    "id": "8a2c5417-878e-4d68-a57a-2f01d0f4790b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SkillThree",
                    "type": "Button",
                    "id": "7a54d1ff-fafc-4823-b280-600de4693046",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0e46d8c6-53f5-4527-a3ac-25b01966d953",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6ce38ebb-0042-4518-a001-5e842e7db1ac",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SkillOne",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1921816c-9d46-401e-9266-13500f773e6e",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SkillTwo",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "64568105-088d-4c47-b00e-fd0340a15b1f",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SkillThree",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}